--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="irocho.wordpress.com">Páxina principal</a></li>
+        		<li><a href="irocho.wordpress.com">Páxina principal de i-rochiño </a></li>
 	        	<li><a href="https://medium.com/irocho-en-frances">Páxina de francés</a></li>
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
@@ -16,14 +16,13 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
+        		<h1>Benvidos a esta proba de organización da loxística de i-rochiño</h1>
+				<p>Polo de agora temos as páxinas que vedes arriba </p> 
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:irocho.profe@gmail.com">email</a></li>
+        		<li><a href="https://github.com/irocho">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
 	</body>
