--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Benvidos a esta proba de organización da loxística de i-rochiño</h1>
+        		<h1>Benvidos </h1>
+        		<p>Proba de organización da loxística de i-rochiño</p>
 				<p>Polo de agora temos as páxinas que vedes arriba </p> 
 		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:irocho.profe@gmail.com">email</a></li>
-        		<li><a href="https://github.com/irocho">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/irocho">github.com/irocho</a></li>
 			</ul>
 		</footer>
 	</body>
