--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:irocho.profe@gmail.com">email</a></li>
-        		<li><a href="https://github.com/irocho">github.com/irocho</a></li>
+        		<li><a href="mailto:irocho.profe@gmail.com">correo electrónico</a></li>
+        		<li><a href="https://github.com/irocho">github</a></li>
 			</ul>
 		</footer>
 	</body>
