--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         		<h1>Benvidos </h1>
         		<p>Proba de organización da loxística de i-rochiño</p>
 				<p>Polo de agora temos as páxinas que vedes arriba </p> 
-				seguindo a http://jmcglone.com/guides/github-pages/
+				seguindo a <a href="http://jmcglone.com/guides/github-pages/"> http://jmcglone.com/guides/github-pages/</a>
 		</div><!-- /.container -->
 		<footer>
     		<ul>
