--- a/index.html
+++ b/index.html
@@ -1,31 +1,11 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>i-rochiño</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="irocho.wordpress.com">Páxina principal de i-rochiño </a></li>
-	        	<li><a href="https://medium.com/irocho-en-frances">Páxina de francés</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
+---
+layout: default
+title: i-rochiño
+---
+
     		<div class="blurb">
         		<h1>Benvidos </h1>
         		<p>Proba de organización da loxística de i-rochiño</p>
 				<p>Polo de agora temos as páxinas que vedes arriba </p> 
 				seguindo a <a href="http://jmcglone.com/guides/github-pages/"> http://jmcglone.com/guides/github-pages/</a>
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:irocho.profe@gmail.com">correo electrónico</a></li>
-        		<li><a href="https://github.com/irocho">github</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+		</div><!-- /.blurb -->
