copiei e peguei index.html

--- a/probaChorra.html
+++ b/probaChorra.html
@@ -1,10 +1,11 @@
 ---
 layout: default
-title: Churrada para ver se vai
+title: i-rochiño
 ---
 
-
-	<div class="blurb">
-		<h1>Segunda páxina que dou feito en .html</h1>
-		<p><em>melloraremos co Markdown </em>  <a href="index.html>Pode que volva a unha ligazón local</a></p>
-	</div><!-- /.blurb -->
+    		<div class="blurb">
+        		<h1>Benvidos </h1>
+        		<p>Proba de organización da loxística de i-rochiño</p>
+				<p>Polo de agora temos as páxinas que vedes arriba </p> 
+				seguindo a <a href="http://jmcglone.com/guides/github-pages/"> http://jmcglone.com/guides/github-pages/</a>
+		</div><!-- /.blurb -->
