--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@ title: i-rochiño
         		<h1>Benvidos </h1>
         		<p>Proba de organización da loxística de i-rochiño</p>
 				<p>Polo de agora temos as páxinas que vedes arriba </p> 
-				seguindo a <a href="http://jmcglone.com/guides/github-pages/"> http://jmcglone.com/guides/github-pages/</a>
+				Estamos seguindo a <a href="http://jmcglone.com/guides/github-pages/"> http://jmcglone.com/guides/github-pages/</a>
 		</div><!-- /.blurb -->
