faltaban unhas comiñas

--- a/probaChorra.html
+++ b/probaChorra.html
@@ -5,6 +5,5 @@ title: i-rochiño
 
 <div class="blurb">
 	<h1>Segunda páxina que dou feito en .html</h1>
-	<p><em>melloraremos co Markdown </em>  <a href="index.html>Pode que volva a unha ligazón local</a></p>
+	<p><em>melloraremos co Markdown </em>  <a href="index.html">Pode que volva a unha ligazón local</a></p>
 </div><!-- /.blurb -->
->>>>>>> parent of 21a23d6... Update probaChorra.html
