--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,10 @@
 ---
 layout: default
-title: que vén sendo i-rochiño?
+title: que vén sendo i-rochiño
 ---
+
+quen somos
 
 `estou en irocho.github.io/about/index.html`
 
-quen somos
+
