--- a/about/index.html
+++ b/about/index.html
@@ -5,4 +5,8 @@ title: de que vai i-rochiño
 
 quen somos
 
-`estou en irocho.github.io/about/index.html`
+estou en irocho.github.io/about/index.html
+
+ok
+
+
