Update and rename index.md to index.html

--- a/about/index.html
+++ b/about/index.html
@@ -1,12 +1,10 @@
----
-layout: default
-title: de que vai i-rochiño
----
-
+<html> 
+<body>
 quen somos
-
+<p>
 estou en irocho.github.io/about/index.html
-
+<p>
 ok
 
-
+</body>
+</html> 
