--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ title: Que é eso de i-rochiño?
 			<p>i-rochiño é unha proposta de traballo para a aula
 			<ul class="contacts">
 				<li><a href="">@irocho_</a></li>
-				<li><a href="https://irocho.wordpress.com">Páxina principal</a></li>
+				<li><a href="https://irocho.wordpress.com">Páxina principal en wordpress</a></li>
 				<li><a href="https://medium.com/@irocho">Aprendendo francés</a></li>
 				</ul>
 		</div>
