--- a/probaChorra.html
+++ b/probaChorra.html
@@ -4,6 +4,10 @@ title: i-rochiño
 ---
 
 <div class="blurb">
-	<h1>Segunda páxina que dou feito en .html</h1>
-	<p><em>melloraremos co Markdown </em>  <a href="index.html">Pode que volva a unha ligazón local</a></p>
+	<h3>Segunda páxina que fago tecleando código en html</h3>	
+	<p>Esta páxina usa da carpeta <i>layout/</i> o ficheiro default.html e en <i>css/</i> o ficheiro main.css</p>
+	<p>Podo facer moitas páxinas .html no directorio principal de github e enlazalas a pelo con etiquetas html.</p>
+
+	<p>Outra posibilidade é ter unha estructura na que escribir directamente entradas nun blog, daquela preciso montar un Jekyll.</p>
+	<a href="index.html">Volvemos á páxina principal</a></p>
 </div><!-- /.blurb -->
