--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ title: i-rochiño
         		<h1>Benvidos </h1>
         		<h3>Este sitio é un intento de contar como se fai online un blog en github usando Jekyll</h3>
 				
-				<p> Vou aprendendo a construír paseniño as ligazóns que saen xusto aquí debaixo</p>
-				<p> Esta páxina é index.html. Está no directorio superior do repositorio como 
+				<p> Vou aprendendo a construír paseniño un sitio web online</p>
+				<p> Esta páxina é index.html. Está no directorio superior do repositorio xunto con 
 				<a href="probaChorra.html">esta outra</a> </p> 
 				
 				<p> Se premedes onde pon wiki aí abaixo cóntovos o do que fun facendo ata chegar ó blog en Jekyll</p>
