--- a/about/index.html
+++ b/about/index.html
@@ -9,6 +9,6 @@ title: Que é eso de i-rochiño?
 			<ul class="contacts">
 				<li><a href="">@irocho_</a></li>
 				<li><a href="https://irocho.wordpress.com">i-rochiño en wordpress</a></li>
-				<li><a href="https://medium.com/@irocho">Aprendendo francés</a></li>
+				<li><a href="https://medium.com/@irocho">Aprendendo idiomas</a></li>
 				</ul>
 		</div>
