mellorados os .html que fan de índices

--- a/som.html
+++ b/som.html
@@ -2,6 +2,8 @@
 layout: page
 title: som
 ---
+ïndice de anotacións de sistemas operativos
+
 {% for som in site.som %}
 	<div class="som">
 	   <h2><a href="{{ som.url }}">{{ som.title }}</a></h2>
