--- a/som.html
+++ b/som.html
@@ -2,7 +2,7 @@
 layout: page
 title: som
 ---
-ïndice de anotacións de sistemas operativos
+# Índice de anotacións de sistemas operativos
 
 {% for som in site.som %}
 	<div class="som">
