--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@ layout: default
 title: i-rochiño
 ---
 
-    		<div class="blurb">
-        		<h1>Benvidos </h1>
-        		<h3>Este sitio é un intento de contar como se crea toda a infraestructura en github usando Jekyll para crear un blog e unha coleción de páxinas</h3>
+<div class="blurb">
+		<h1>Benvidos </h1>
+		<h2>Este sitio é un intento de contar como se crea toda a infraestructura en github usando Jekyll para crear un blog e unha coleción de páxinas</h2>
 
-				<p> Vou aprendendo a construír paseniño un sitio web online</p>
-				<p> Esta páxina é index.html. Está no directorio superior do repositorio xunto con
-				<a href="probaChorra.html">esta outra</a> </p>
+    <p> Esta páxina é index.html. Está no directorio superior do repositorio xunto con
+    <a href="probaChorra.html">esta outra</a> </p>
 
-				<p> Se premedes onde pon wiki aí abaixo cóntovos o do que fun facendo para ir montando o Jekyll</p>
-				
-				Estou seguindo a <a href="http://jmcglone.com/guides/github-pages/"> http://jmcglone.com/guides/github-pages/</a>
-		</div><!-- /.blurb -->
+    <p> Se premedes na barra de navegación veredes o que fun facendo para ir montando o Jekyll</p>
+
+    Estou seguindo a <a href="http://jmcglone.com/guides/github-pages/">
+      http://jmcglone.com/guides/github-pages/</a>
+
+</div><!-- /.blurb -->
