--- a/som.html
+++ b/som.html
@@ -2,7 +2,7 @@
 layout: page
 title: som
 ---
-# Índice de anotacións de sistemas operativos
+<h2>Índice de anotacións de sistemas operativos</h2>
 
 {% for som in site.som %}
 	<div class="som">
