Xusto antes do Travis

--- a/montaxe/index.html
+++ b/montaxe/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: montaxe
 ---
-<h2>Índice de anotacións de montaxe de sistemas</h2>
+<span style="color: green"><h2>Índice de anotacións de montaxe de sistemas </h2> </span>
 
 {% for montaxe in site.montaxe %}
 	<div class="montaxe">
