--- a/som/index.html
+++ b/som/index.html
@@ -2,7 +2,8 @@
 layout: page
 title: som
 ---
-<h2>Índice de anotacións de sistemas operativos</h2>
+
+<span style="color: orange"><h2>Índice de anotacións de montaxe de sistemas </h2> </span>
 
 {% for som in site.som %}
 	<div class="som">
