faio na coleción  planificar

--- a/about/index.html
+++ b/about/index.html
@@ -5,10 +5,8 @@ title: Que é eso de i-rochiño?
 
 		<div class="about">
 			<h1>Quen somos</h1>
-			<p>i-rochiño é unha proposta de traballo para a aula
-			<ul class="contacts">
-				<li><a href="">@irocho_</a></li>
-				<li><a href="https://irocho.wordpress.com">i-rochiño en wordpress</a></li>
-				<li><a href="https://medium.com/@irocho">Aprendendo idiomas</a></li>
-				</ul>
+			<p> Este sitio web estático é unha escolma das anotacións que imos usar este curso nas asignaturas de Sistemas operativos monoposto e Montaxe e mantemento de sistemas.	</p>
+					<p>
+				Para saber como traballamos lembrade <a href="https://irocho.wordpress.com">visitar o noso sitio web. </a> Atopades máis información <a href="https://irocho.wordpress.com/about">neste apartado. </a>
+		</p>
 		</div>
