--- a/som/index.html
+++ b/som/index.html
@@ -3,7 +3,7 @@ layout: page
 title: som
 ---
 
-<span style="color: orange"><h2>Índice de anotacións de montaxe de sistemas </h2> </span>
+<span style="color: orange"><h2>Índice de anotacións de Sistemas Operativos Monoposto</h2> </span>
 
 {% for som in site.som %}
 	<div class="som">
