creado un index para som outro para montaxae que se chama dende a barra de navegación

--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@ title: i-rochiño
 
 <div class="blurb">
 		<h1>Benvidos </h1>
-		<h2>Este sitio é un intento de contar como se crea toda a infraestructura en github usando Jekyll para crear un blog e unha coleción de páxinas</h2>
 
-    <p> Esta páxina é index.html. Está no directorio superior do repositorio xunto con
+		<h3>Os módulos que imos abordar este ano serán:
+
+		</h3>
+		<ul>
+				<li><a href="/organizar/indexsom.html">Anotacións de Sistemas Operativos </a></li>
+				<li><a href="organizar/indexmontaxe.html">Anotacións de Montaxe </a></li>
+					<!--<li><a href="/planificar">Anotacións de Planificación </a></li>-->
+
+				<!--<li><a href="/blog">Blog </a></li>-->
+		</ul>
+
+  <!-- 		<h2>Este sitio é un intento de contar como se crea toda a infraestructura en github usando Jekyll para crear un blog e unha coleción de páxinas</h2>
+
+  <p> Esta páxina é index.html. Está no directorio superior do repositorio xunto con
     <a href="probaChorra.html">esta outra</a> </p>
 
     <p> Se premedes na barra de navegación veredes o que fun facendo para ir montando o Jekyll</p>
 
     Estou seguindo a <a href="http://jmcglone.com/guides/github-pages/">
       http://jmcglone.com/guides/github-pages/</a>
+			 -->
 
 </div><!-- /.blurb -->
