creada a coleción memoria

--- a/montaxe/index.html
+++ b/montaxe/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: montaxe
 ---
-<span style="color: green"><h2>Índice de anotacións de Montaxe de Sistemas </h2> </span>
+<span style="color: green"><h2>Compoñentes dun ordenador </h2> </span>
 
 {% for montaxe in site.montaxe %}
 	<div class="montaxe">
