--- a/organizar/indexmontaxe.html
+++ b/organizar/indexmontaxe.html
@@ -6,7 +6,7 @@ title: i-rochiño
 <div class="blurb">
 	<h3>As anotacións que temos para esta asignatura son:</h3>
 	<ul>
-		<li> <a href="/montaxe">Compoñentes da placa base</a></p>
+		<li> <a href="/montaxe">Compoñentes dun ordenador</a></p>
 </ul>
-	<a href="index.html">Volvemos á portada</a></p>
+
 </div><!-- /.blurb -->
