--- a/organizar/indexsom.html
+++ b/organizar/indexsom.html
@@ -8,8 +8,8 @@ title: i-rochiño
 	<h3>As anotacións que temos para esta asignatura son:</h3>
 	<ul>
 		<li> <a href="/som">Caracterización de Sistemas Operativos</a></p>
-			<li> <a href="/planificar">Algoritmos de planificación</a></p>
-
+		<li> <a href="/planificar">Algoritmos de planificación</a></p>
+		<li> <a href="/memoria">Organización da memoria</a></p>
 </ul>
-	<a href="index.html">Volvemos á portada</a></p>
+
 </div><!-- /.blurb -->
