creada coleción _placa/

--- a/organizar/indexmontaxe.html
+++ b/organizar/indexmontaxe.html
@@ -7,6 +7,7 @@ title: i-rochiño
 	<h3>As anotacións que temos para esta asignatura son:</h3>
 	<ul>
 		<li> <a href="/montaxe">Compoñentes dun ordenador</a></p>
+			<li> <a href="/placa">Compoñentes na placa base</a></p>
 </ul>
 
 </div><!-- /.blurb -->
