Mellorada xestión de E/S

--- a/organizar/indexsom.html
+++ b/organizar/indexsom.html
@@ -10,5 +10,6 @@ title: i-rochiño
 		<li> <a href="/som">Caracterización de Sistemas Operativos</a></p>
 		<li> <a href="/planificar">Algoritmos de planificación</a></p>
 		<li> <a href="/memoria">Organización da memoria</a></p>
+		<li> <a href="/entradaSaida">Xestión de E/S</a></p>
 </ul>
 </div><!-- /.blurb -->
