tratando de fabricar .pdf

--- a/probaChorra.html
+++ b/probaChorra.html
@@ -1,10 +1,11 @@
 ---
 layout: default
 title: i-rochiño
+pdf: true
 ---
 
 <div class="blurb">
-	<h3>Segunda páxina que fago tecleando código en html</h3>	
+	<h3>Segunda páxina que fago tecleando código en html</h3>
 	<p>Esta páxina usa da carpeta <i>layout/</i> o ficheiro default.html e en <i>css/</i> o ficheiro main.css</p>
 	<p>Podo facer moitas páxinas .html no directorio principal de github e enlazalas a pelo con etiquetas html.</p>
 
