--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: i-rochiño
 		</h3>
 		<ul>
 				<li><a href="/organizar/indexsom.html">Anotacións de Sistemas Operativos </a></li>
-				<li><a href="organizar/indexmontaxe.html">Anotacións de Montaxe </a></li>
+				<li><a href="organizar/indexmontaxe.html">Anotacións de Hardware </a></li>
 					<!--<li><a href="/planificar">Anotacións de Planificación </a></li>-->
 
 				<!--<li><a href="/blog">Blog </a></li>-->
