--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: i-rochiño
 <div class="blurb">
 		<h1>Benvidos </h1>
 
-		<h3>Os módulos que imos abordar este ano serán:
+		<h3>Os temas que imos abordar este ano serán:
 
 		</h3>
 		<ul>
