--- a/codificar/index.html
+++ b/codificar/index.html
@@ -1,11 +1,11 @@
 ---
 layout: page
-title: placa
+title: codificar
 ---
-<span style="color: green"><h2>Compoñentes na placa base </h2> </span>
+<span style="color: green"><h2>Tratamento da información </h2> </span>
 
-{% for placa in site.placa %}
-	<div class="placa">
-	   <h2><a href="{{ placa.url }}">{{ placa.title }}</a></h2>
+{% for codificar in site.codificar %}
+	<div class="codificar">
+	   <h2><a href="{{ codificar.url }}">{{ codificar.title }}</a></h2>
 	</div>
 {% endfor %}
