html en organizar/indexmontaxe.html

--- a/organizar/indexmontaxe.html
+++ b/organizar/indexmontaxe.html
@@ -6,7 +6,9 @@ title: i-rochiño
 <div class="blurb">
 	<h3>As anotacións que temos para esta asignatura son:</h3>
 	<ul>
+		<li> <a href="/codificar">Tratamento da información</a></p>
+
 		<li> <a href="/montaxe">Partes dun ordenador</a></p>
-			<li> <a href="/placa">Compoñentes na placa base</a></p>
+		<li> <a href="/placa">Compoñentes na placa base</a></p>
 </ul>
 </div><!-- /.blurb -->
