engadida a receta.txt

--- a/organizar/indexsom.html
+++ b/organizar/indexsom.html
@@ -13,3 +13,8 @@ title: i-rochiño
 		<li> <a href="/entradaSaida">Xestión de E/S</a></p>
 </ul>
 </div><!-- /.blurb -->
+
+
+
+
+<!-- FIXME se tal enlazar aquí -->
