--- a/organizar/indexmontaxe.html
+++ b/organizar/indexmontaxe.html
@@ -8,7 +8,11 @@ title: i-rochiño
 	<ul>
 		<li> <a href="/codificar">Tratamento da información</a></p>
 
-		<li> <a href="/montaxe">Partes dun ordenador</a></p>
-		<li> <a href="/placa">Compoñentes na placa base</a></p>
+		<li> <a href="/montaxe">Interior dun ordenador</a></p>
+		<li> <a href="/placa"> ...Compoñentes na placa base</a></p>
 </ul>
 </div><!-- /.blurb -->
+
+
+
+<!-- FIXME se tal enlazar aquí -->
