--- a/organizar/indexmontaxe.html
+++ b/organizar/indexmontaxe.html
@@ -4,12 +4,13 @@ title: i-rochiño
 ---
 
 <div class="blurb">
-	<h3>As anotacións que temos para esta asignatura son:</h3>
+	<h3>As anotacións que temos para este tema son:</h3>
 	<ul>
 		<li> <a href="/codificar">Tratamento da información</a></p>
 
-		<li> <a href="/montaxe">Interior dun ordenador</a></p>
-		<li> <a href="/placa"> ...Compoñentes na placa base</a></p>
+		<li> <a href="/montaxe">Interior do ordenador</a></p>
+		<li> <a href="/placa"> ... Compoñentes na placa base</a></p>
+			<li> <a href="/perifericos">Periféricos</a></p>
 </ul>
 </div><!-- /.blurb -->
 
