--- a/organizar/indexmontaxe.html
+++ b/organizar/indexmontaxe.html
@@ -8,8 +8,8 @@ title: i-rochiño
 	<ul>
 		<li> <a href="/codificar">Tratamento da información</a></p>
 
-		<li> <a href="/montaxe">Interior do ordenador</a></p>
-		<li> <a href="/placa"> ... Compoñentes na placa base</a></p>
+		<li> <a href="/montaxe">Partes dun ordenador</a></p>
+		<li> <a href="/placa"> Compoñentes na placa base</a></p>
 			<li> <a href="/perifericos">Periféricos</a></p>
 </ul>
 </div><!-- /.blurb -->
