--- a/organizar/indexmontaxe.html
+++ b/organizar/indexmontaxe.html
@@ -9,7 +9,7 @@ title: i-rochiño
 		<li> <a href="/codificar">Tratamento da información</a></p>
 
 		<li> <a href="/montaxe">Compoñentes dun ordenador</a></p>
-		<li> <a href="/placa"> Partes daa placa base</a></p>
+		<li> <a href="/placa"> Partes da placa base</a></p>
 			<li> <a href="/perifericos">Periféricos</a></p>
 </ul>
 </div><!-- /.blurb -->
