--- a/organizar/indexsom.html
+++ b/organizar/indexsom.html
@@ -5,7 +5,7 @@ title: i-rochiño
 
 
 <div class="blurb">
-	<h3>As anotacións que temos para esta asignatura son:</h3>
+	<h3>As anotacións que temos para este tema son:</h3>
 	<ul>
 		<li> <a href="/som">Caracterización de Sistemas Operativos</a></p>
 		<li> <a href="/planificar">Algoritmos de planificación</a></p>
