--- a/organizar/indexmontaxe.html
+++ b/organizar/indexmontaxe.html
@@ -7,11 +7,11 @@ title: i-rochiño
 <div class="blurb">
 	<h3>As anotacións que temos para este tema son:</h3>
 	<ul>
-		<li> <a href="/codificar">Tratamento da información</a>
+		<li> <a href="/codificar">Tratamento da información</a></p>
 
-		<li> <a href="/montaxe">Compoñentes dun ordenador</a>
-		<li> <a href="/placa"> Partes da placa base</a>
-			<li> <a href="/perifericos">Periféricos</a>
+		<li> <a href="/montaxe">Compoñentes dun ordenador</a></p>
+		<li> <a href="/placa"> Partes da placa base</a></p>
+			<li> <a href="/perifericos">Periféricos</a></p>
 </ul>
 </div><!-- /.blurb -->
 
