--- a/index.html
+++ b/index.html
@@ -6,15 +6,11 @@ title: i-rochiño
 <div class="blurb">
 		<h1>Benvidos </h1>
 
-		<h3>Os temas que imos abordar este ano serán:
-
-		</h3>
+		<h3>As anotacions nas que estamos traballando son:</h3>
 		<ul>
 				<li><a href="/organizar/indexsom.html">Anotacións de Sistemas Operativos </a></li>
 				<li><a href="organizar/indexmontaxe.html">Anotacións de Hardware </a></li>
-					<!--<li><a href="/planificar">Anotacións de Planificación </a></li>-->
-
-				<!--<li><a href="/blog">Blog </a></li>-->
+<!--<li><a href="/blog">Blog </a></li>-->
 		</ul>
 
   <!-- 		<h2>Este sitio é un intento de contar como se crea toda a infraestructura en github usando Jekyll para crear un blog e unha coleción de páxinas</h2>
