sen referencias ás asignaturas do ano pasado

--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ title: Que é eso de i-rochiño?
 
 		<div class="about">
 			<h1>Quen somos</h1>
-			<p> Este sitio web estático é unha escolma das anotacións que imos usar este curso nas asignaturas de Sistemas operativos monoposto e Montaxe e mantemento de sistemas.	</p>
+			<p> Este sitio web estático é unha escolma das anotacións de temas de informática.Imos ir completando de vagar.	</p>
 					<p>
 				Para saber como traballamos lembrade <a href="https://irocho.wordpress.com">visitar o noso sitio web. </a> Atopades máis información <a href="https://irocho.wordpress.com/about">neste apartado. </a>
 		</p>
