--- a/organizar/indexmontaxe.html
+++ b/organizar/indexmontaxe.html
@@ -5,7 +5,7 @@ title: i-rochiño
 
 
 <div class="blurb">
-	<h3>As anotacións que temos para este tema son:</h3>
+	<h3>As anotacións que temos para Hardware son:</h3>
 	<ul>
 		<li> <a href="/codificar">Tratamento da información</a></p>
 
