--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ title: i-rochiño
 
 		<h3>As anotacions nas que estamos traballando son:</h3>
 		<ul>
+				<li><a href="organizar/indexjavascript.html">Anotacións de JavaScript </a></li>
+
 				<li><a href="/organizar/indexsom.html">Anotacións de Sistemas Operativos </a></li>
 				<li><a href="organizar/indexmontaxe.html">Anotacións de Hardware </a></li>
 <!--<li><a href="/blog">Blog </a></li>-->
