--- a/organizar/indexjavascript.html
+++ b/organizar/indexjavascript.html
@@ -7,6 +7,8 @@ title: i-rochiño
 <div class="blurb">
 	<h3>Este é o noso plan de traballo para JavaScript:</h3>
 	<ul>
+				<li> <a href="/js/00introducion"> 00introducion </a></p>
+
 		<li> <a href="/js">Lista de tarefas</a></p>
 
 <!--		<li> <a href="/t1">Tarefa 1</a></p>
