--- a/organizar/indexjavascript.html
+++ b/organizar/indexjavascript.html
@@ -12,6 +12,8 @@ title: i-rochiño
 		<li> <a href="/js">Lista de tarefas</a></p>
 		<li> <a href="/js/trecursos"> Recursos </a></p>
 		<li> <a href="/js/xtras"> Extras </a></p>
+					<li> <a href="/js/extras"> Extras!!!!! </a></p>
+
 
 <!--		<li> <a href="/t1">Tarefa 1</a></p>
 
