--- a/organizar/indexjavascript.html
+++ b/organizar/indexjavascript.html
@@ -9,10 +9,9 @@ title: i-rochiño
 	<ul>
 		<li> <a href="/js/00introducion"> Que é JavaScript? </a></p>
 
-		<li> <a href="/javascript">Lista de tarefas</a></p>
+		<li> <a href="/js">Lista de tarefas</a></p>
 		<li> <a href="/js/trecursos"> Recursos </a></p>
 		<li> <a href="/js/xtras"> Extras </a></p>
-					<li> <a href="/js/extras"> Extras!!!!! </a></p>
 
 
 <!--		<li> <a href="/t1">Tarefa 1</a></p>
