--- a/js/index.html
+++ b/js/index.html
@@ -3,7 +3,7 @@ layout: page
 title: js
 ---
 
-<span style="color: orange"><h2>Programación en JavaScript </h2> </span>
+<span style="color: yellow"><h2>Programación en JavaScript </h2> </span>
 
 {% for js in site.js %}
 	<div class="js">
