--- a/organizar/indexjavascript.html
+++ b/organizar/indexjavascript.html
@@ -7,14 +7,14 @@ title: i-rochiño
 <div class="blurb">
 	<h3>Este é o noso plan de traballo para JavaScript:</h3>
 	<ul>
-		<li> <a href="/js/00introducion"> Que é JavaScript? </a></p>
-
+		
 		<li> <a href="/js">Lista de tarefas</a></p>
-		<li> <a href="/js/trecursos"> Recursos </a></p>
+	<!--	<li> <a href="/js/trecursos"> Recursos </a></p>
 		<li> <a href="/js/xtras"> Extras </a></p>
+<li> <a href="/js/00introducion"> Que é JavaScript? </a></p>
 
 
-<!--		<li> <a href="/t1">Tarefa 1</a></p>
+		<li> <a href="/t1">Tarefa 1</a></p>
 
 		<li> <a href="/t2">Tarefa 2</a></p>
 
