--- a/organizar/indexjavascript.html
+++ b/organizar/indexjavascript.html
@@ -5,7 +5,8 @@ title: i-rochiño
 
 
 <div class="blurb">
-	<h3>Este é o noso plan de traballo para JavaScript:</h3>
+	<span style="color: chocolate"><h2>Este é o noso plan de traballo para JavaScript: </h2> </span>
+
 	<ul>
 		
 		<li> <a href="/js">Lista de tarefas</a></p>
