--- a/js/index.html
+++ b/js/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: js
+title: Programación en JavaScript
 ---
 
 <span style="color: chocolate"><h2>Programación en JavaScript </h2> </span>
