--- a/js/index.html
+++ b/js/index.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Programación en JavaScript
+title: JavaScript
 ---
-
 <span style="color: chocolate"><h2>Programación en JavaScript </h2> </span>
+
 
 {% for js in site.js %}
 	<div class="js">
