--- a/organizar/indexjs.html
+++ b/organizar/indexjs.html
@@ -9,7 +9,7 @@ title: i-rochiño
 
 	<ul>
 		
-		<li> <a href="/js">Lista de tarefas</a></p>
+		<li> <a href="/javascripts">Lista de tarefas</a></p>
 
 </ul>
 </div><!-- /.blurb -->
