--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: JavaScript
+title: javascript
 ---
 
 <span style="color: chocolate"><h2>Programación en JavaScript </h2> </span>
