--- a/organizar/indexjs.html
+++ b/organizar/indexjs.html
@@ -6,13 +6,13 @@ title: i-rochiño
 
 <div class="blurb">
 	<span style="color: chocolate"><h2>Este é o noso plan de traballo para JavaScript: </h2> </span>
-
+<!--
 	<ul>
 		
 		<li> <a href="/javascript">Lista de tarefas</a></p>
 
 </ul>
-</div><!-- /.blurb -->
+</div> /.blurb -->
 
 {% for javascript in site.javascript %}
 	<div class="javascript">
