--- a/organizar/indexjs.html
+++ b/organizar/indexjs.html
@@ -5,7 +5,7 @@ title: i-rochiño
 
 
 <div class="blurb">
-	<span style="color: chocolate"><h2>Este é o noso plan de traballo para JavaScript: </h2> </span>
+	<span><h2>Este é o noso plan de traballo para JavaScript: </h2> </span>
 <!--
 	<ul>
 		
@@ -16,7 +16,7 @@ title: i-rochiño
 
 {% for javascript in site.javascript %}
 	<div class="javascript">
-	   <h3><a href="{{ javascript.url }}">{{ javascript.title }}</a></h3>
+	   <h4><a href="{{ javascript.url }}">{{ javascript.title }}</a></h4>
 	</div>
 {% endfor %}
 
