--- a/organizar/indexjs.html
+++ b/organizar/indexjs.html
@@ -5,7 +5,7 @@ title: i-rochiño
 
 
 <div class="blurb">
-	<span><h2>Este é o noso plan de traballo para JavaScript: </h2> </span>
+	<h2>Este é o noso plan de traballo para JavaScript: </h2>
 <!--
 	<ul>
 		
