--- a/organizar/indexjs.html
+++ b/organizar/indexjs.html
@@ -5,7 +5,7 @@ title: i-rochiño
 
 
 <div class="blurb">
-	<h2>Este é o noso plan de traballo para JavaScript: </h2>
+	<h2> </h2>
 <!--
 	<ul>
 		
@@ -13,6 +13,7 @@ title: i-rochiño
 
 </ul>
 </div> /.blurb -->
+<span style="color: chocolate"><h2>Este é o noso plan de traballo para JavaScript: </h2> </span>
 
 {% for javascript in site.javascript %}
 	<div class="javascript">
