--- a/organizar/indexjs.html
+++ b/organizar/indexjs.html
@@ -5,21 +5,15 @@ title: i-rochiño
 
 
 <div class="blurb">
-	<h2> </h2>
-<!--
+	<h3>O noso traballo para JavaScript témolo en varios sitios:</h3>
 	<ul>
-		
-		<li> <a href="/javascript">Lista de tarefas</a></p>
+		<li> <a href="/javascript">Lista de tarefas a realizar</a></p>
 
+		<li> <a href="https://github.com/irocho/exerciciosJavascript">Repositorio en GitHub</a></p>
+		<li> <a href="https://irocho.wordpress.com/tag/javascript/"> Por suposto o noso blog tradicional en WordPress</a></p>
+			<li> <a href="/perifericos">Periféricos</a></p>
 </ul>
-</div> /.blurb -->
-<span style="color: chocolate"><h2>Este é o noso plan de traballo para JavaScript: </h2> </span>
-
-{% for javascript in site.javascript %}
-	<div class="javascript">
-	   <h4><a href="{{ javascript.url }}">{{ javascript.title }}</a></h4>
-	</div>
-{% endfor %}
+</div><!-- /.blurb -->
 
 
 
