--- a/organizar/indexjs.html
+++ b/organizar/indexjs.html
@@ -5,7 +5,9 @@ title: i-rochiño
 
 
 <div class="blurb">
-	<h3>O noso traballo para JavaScript témolo en varios sitios:</h3>
+	<span style="color: chocolate"><h2>O noso traballo para JavaScript témolo en varios sitios:</h2> </span>
+
+	<h3></h3>
 	<ul>
 		<li> <a href="/javascript">Lista de tarefas a realizar</a></p>
 
