--- a/organizar/indexjs.html
+++ b/organizar/indexjs.html
@@ -12,7 +12,7 @@ title: i-rochiño
 		<li> <a href="/javascript">Lista de tarefas a realizar</a></p>
 
 		<li> <a href="https://github.com/irocho/exerciciosJavascript">Repositorio en GitHub</a></p>
-		<li> <a href="https://irocho.wordpress.com/tag/javascript/"> Por suposto o noso blog tradicional en WordPress</a></p>
+		<li> <a href="https://irocho.wordpress.com/tag/javascript/"> Uns proxectos no noso blog en WordPress</a></p>
 </ul>
 </div><!-- /.blurb -->
 
