--- a/organizar/indexmontaxe.html
+++ b/organizar/indexmontaxe.html
@@ -5,7 +5,8 @@ title: i-rochiño
 
 
 <div class="blurb">
-	<h2>As anotacións que temos para Hardware veñen sendo:</h2>
+	<span style="color: green"><h2>As anotacións que temos para Hardware veñen sendo: </h2> </span>
+
 	<ul>
 		<li> <a href="/codificar">Tratamento da información</a></p>
 
