--- a/organizar/indexsom.html
+++ b/organizar/indexsom.html
@@ -5,7 +5,7 @@ title: i-rochiño
 
 
 <div class="blurb">
-	<h2>As anotacións que temos para Sistemas Operativos veñen sendo:</h2>
+	<span style="color: orange"><h2>As anotacións que temos para Sistemas Operativos veñen sendo:</h2> </span>
 	<ul>
 		<li> <a href="/som">Caracterización de Sistemas Operativos</a></p>
 		<li> <a href="/planificar">Algoritmos de planificación</a></p>
