--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,7 +6,7 @@ title: javascript
 
 {% for javascript in site.javascript %}
 	<div class="javascript">
-	   <h4><a href="{{ javascript.url }}">{{ javascript.title }}</a></h4>
+	   <a href="{{ javascript.url }}">{{ javascript.title }}</a>
 	</div>
 {% endfor %}
 
