--- a/mate_vello/s_contas2.html
+++ b/mate_vello/s_contas2.html
@@ -193,7 +193,7 @@ outro exercicio</a></p>
       <p>&nbsp;</p>
       <p>&nbsp;</p>
       <p><font size="-1"><a
- href="http://dl.dropbox.com/u/107005637/s_contas3.html">subir de nivel</a></font></p>
+ href="http://https://irocho.github.io/mate_vello/s_contas3.html">subir de nivel</a></font></p>
       </div>
 <!-- InstanceEndEditable --></td>
     </tr>
