--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@ title: i-rochiño
 <div class="blurb">
 		<h1>Benvidos </h1>
 
-		<h3>As anotacions nas que estamos traballando son:</h3>
+		<h3>As anotacions nas que traballamos son:</h3>
 		<ul>
+				<li><a href="organizar/indexredes.html">Anotacións de Redes </a></li>
 				<li><a href="organizar/indexjs.html">Anotacións de JavaScript </a></li>
 				<li><a href="/organizar/indexsom.html">Anotacións de Sistemas Operativos </a></li>
 				<li><a href="organizar/indexmontaxe.html">Anotacións de Hardware </a></li>
