proba en Cariño

--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,6 @@ title: Que é eso de i-rochiño?
 			<h1>Quen somos</h1>
 			<p> Este sitio web estático é unha escolma das anotacións de temas de informática. Imos ir completando de vagar.	</p>
 					<p>
-				Para saber como traballamos lembrade <a href="https://irocho.wordpress.com">visitar o noso sitio web. </a> Atopades máis información <a href="https://irocho.wordpress.com/about">neste apartado. </a>
+				Para saber como traballamos lembrade <a href="https://irocho.wordpress.com">visitar o noso sitio web. </a> Atopades máis información de quen somos  <a href="https://irocho.wordpress.com/about">neste apartado. </a>
 		</p>
 		</div>
