traballado o da placa

--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@ title: i-rochiño
 
 <div class="blurb">
 		<h1>Benvidos </h1>
+		<p>Este é un sitio web estático para ir anotando o que imos aprendendo. Non é un libro de texto nen unha wikipedia de andar por casa!!</p>
+		
+		<p>  Naceu dende 
+			<a href="https://irocho.wordpress.com">i-rochiño en wordpress </a>
+			 que é onde tedes as actividades diarias para facer na aula</p>
+			<h5>Escollede na barra de navegación de arriba o que vos interese e sempre tedes as casitas para volver á portada de cada asunto</h5>
 
-		<h3>As anotacions nas que traballamos son:</h3>
+
+		<h3>O que fumos traballando:</h3>
 		<ul>
-				<li><a href="organizar/indexredes.html">Anotacións de Redes </a></li>
+				<li><a href="organizar/indexredes.html">Anotacións de Redes (versión bebé) </a></li>
 				<li><a href="organizar/indexjs.html">Anotacións de JavaScript </a></li>
 				<li><a href="/organizar/indexsom.html">Anotacións de Sistemas Operativos </a></li>
 				<li><a href="organizar/indexmontaxe.html">Anotacións de Hardware </a></li>
