--- a/organizar/indexmontaxe.html
+++ b/organizar/indexmontaxe.html
@@ -5,15 +5,16 @@ title: i-rochiño
 
 
 <div class="blurb">
-	<span style="color: green"><h2>As anotacións que temos para Hardware veñen sendo: </h2> </span>
+	<span style="color: green">
+		<h2>As anotacións que temos para Hardware veñen sendo: </h2>
+	</span>
 
 	<ul>
 		<li> <a href="/codificar">Tratamento da información</a></p>
-
 		<li> <a href="/montaxe">Compoñentes dun ordenador</a></p>
 		<li> <a href="/placa"> Partes da placa base</a></p>
-			<li> <a href="/perifericos">Periféricos</a></p>
-</ul>
+		<li> <a href="/perifericos">Periféricos</a></p>
+	</ul>
 </div><!-- /.blurb -->
 
 
