--- a/organizar/indexredes.html
+++ b/organizar/indexredes.html
@@ -7,7 +7,7 @@ title: i-rochiño
 <div class="blurb">
 	<span style="color: orange"><h2>As anotacións que temos para redes veñen sendo:</h2> </span>
 	<ul>
-		<li> <a href="/redes">Introdución</a></p>
+		<li> <a href="/redes">Construíndo. Proximamente.... </a></p>
 </ul>
 </div><!-- /.blurb -->
 
