--- a/placa/index.html
+++ b/placa/index.html
@@ -6,6 +6,6 @@ title: placa
 
 {% for placa in site.placa %}
 	<div class="placa">
-	   <h3><a href="{{ placa.url }}">{{ placa.title }}</a></h3>
+	   <h4><li><a href="{{ placa.url }}">{{ placa.title }}</a></li></h4>
 	</div>
 {% endfor %}
