--- a/redes/index.html
+++ b/redes/index.html
@@ -5,7 +5,7 @@ title: redes
 
 <span style="color: orange"><h2>Redes de área local</h2> </span>
 
-{% for som in site.som %}
+{% for redes in site.redes %}
 	<div class="redes">
 	   <h3><a href="{{ redes.url }}">{{ redes.title }}</a></h3>
 	</div>
