--- a/organizar/indexmontaxe.html
+++ b/organizar/indexmontaxe.html
@@ -11,8 +11,10 @@ title: i-rochiño
 
 	<ul>
 		<li> <a href="/codificar">Tratamento da información</a></p>
-		<li> <a href="/montaxe">Compoñentes dun ordenador</a></p>
-		<li> <a href="/placa"> Partes da placa base</a></p>
+		<li> <a href="/montaxe"> Partes dun ordenador</a></p>
+		<li> <a href="/placa"> Conectado á placa base</a></p>
+		<li> <a href="/memoria">Memoria</a></p>
+
 		<li> <a href="/perifericos">Periféricos</a></p>
 	</ul>
 </div><!-- /.blurb -->
