mellorado co curso de platega. Reorganizado un chisco

--- a/memoria/index.html
+++ b/memoria/index.html
@@ -4,7 +4,7 @@ title: memoria
 ---
 
 
-<span style="color: orange"><h2>Organización da memoria</h2> </span>
+<span style="color: orange"><h2>Memoria dun ordenador</h2> </span>
 
 
 {% for memoria in site.memoria %}
