--- a/montaxe/index.html
+++ b/montaxe/index.html
@@ -2,10 +2,14 @@
 layout: page
 title: montaxe
 ---
-<span style="color: green"><h2>Compoñentes dun ordenador </h2> </span>
+<span style="color: green"><h2>Elementos dun ordenador </h2> </span>
 
 {% for montaxe in site.montaxe %}
 	<div class="montaxe">
 	   <h3><a href="{{ montaxe.url }}">{{ montaxe.title }}</a></h3>
 	</div>
 {% endfor %}
+
+
+
+
