--- a/organizar/indexmontaxe.html
+++ b/organizar/indexmontaxe.html
@@ -6,14 +6,18 @@ title: i-rochiño
 
 <div class="blurb">
 	<span style="color: green">
-		<h2>As anotacións que temos para Hardware veñen sendo: </h2>
+		<h2>As anotacións que temos para hardware veñen sendo: </h2>
 	</span>
-
 	<ul>
 		<li> <a href="/codificar">Tratamento da información</a></p>
-		<li> <a href="/montaxe"> Partes dun ordenador</a></p>
-		<li> <a href="/placa"> Conectado á placa base</a></p>
+
+		<li> <a href="/placa">A placa base e os seus compoñentes</a></p>
+
+		<li> <a href="/procesador">Procesador</a></p>
+
 		<li> <a href="/memoria">Memoria</a></p>
+
+		<li> <a href="/montaxe">Outros elementos dun ordenador</a></p>
 
 		<li> <a href="/perifericos">Periféricos</a></p>
 	</ul>
