--- a/placa/index.html
+++ b/placa/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: placa
 ---
-<span style="color: green"><h2>Conectados á placa base: </h2> </span>
+<span style="color: green"><h2>Na placa base: </h2> </span>
 
 {% for placa in site.placa %}
 	<div class="placa">
