--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@ title: i-rochiño
 		<ul>
 				<li><a href="organizar/indexredes.html">Anotacións de Redes (versión bebé) </a></li>
 				<li><a href="organizar/indexjs.html">Anotacións de JavaScript </a></li>
+				<li><a href="organizar/indexpython.html">Anotacións de Python </a></li>
+
 				<li><a href="/organizar/indexsom.html">Anotacións de Sistemas Operativos </a></li>
 				<li><a href="organizar/indexmontaxe.html">Anotacións de Hardware </a></li>
 <!--<li><a href="/blog">Blog </a></li>-->
