--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@ title: i-rochiño
 				<li><a href="organizar/indexpython.html">Anotacións de Python </a></li>
 
 				<li><a href="/organizar/indexsom.html">Anotacións de Sistemas Operativos </a></li>
+				
 				<li><a href="organizar/indexmontaxe.html">Anotacións de Hardware </a></li>
-<!--<li><a href="/blog">Blog </a></li>-->
+				<li><a href="organizar/indexcpd.html">Anotacións CPD </a></li>
+
+				<!--<li><a href="/blog">Blog </a></li>-->
 		</ul>
 
   <!-- 		<h2>Este sitio é un intento de contar como se crea toda a infraestructura en github usando Jekyll para crear un blog e unha coleción de páxinas</h2>
