mellorado índice CPS

--- a/organizar/indexcpd.html
+++ b/organizar/indexcpd.html
@@ -1,16 +1,14 @@
 ---
 layout: default
-title: i-rochiño
+title: cpd
 ---
 
 
 <div class="blurb">
-	<span style="color: orange"><h2>As anotacións que temos para Sistemas Operativos veñen sendo:</h2> </span>
+	<span style="color: orange"><h2>A información que temos é:</h2> </span>
 	<ul>
-		<li> <a href="/som">Caracterización de Sistemas Operativos</a></p>
-		<li> <a href="/planificar">Algoritmos de planificación</a></p>
-		<li> <a href="/memoria">Organización da memoria</a></p>
-		<li> <a href="/entradaSaida">Xestión de E/S</a></p>
+		<li> <a href="/cpd">Imaxes dun CPD</a></p>
+
 </ul>
 </div><!-- /.blurb -->
 
