--- a/cpd/index.html
+++ b/cpd/index.html
@@ -5,7 +5,7 @@ title: cpd
 <span style="color: yellow"><h2>Nun CPD: </h2> </span>
 
 {% for cpd in site.cpd %}
-	<div class="placa">
+	<div class="cpd">
 	   <h4><li><a href="{{ cpd.url }}">{{ cpd.title }}</a></li></h4>
 	</div>
 {% endfor %}
