--- a/cpd/index.html
+++ b/cpd/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: cpd
 ---
-<span style="color: yellow"><h2>Nun CPD: </h2> </span>
+<span style="color: yellowgreen"><h2>Nun CPD: </h2> </span>
 
 {% for cpd in site.cpd %}
 	<div class="cpd">
