--- a/cpd/index.html
+++ b/cpd/index.html
@@ -2,10 +2,17 @@
 layout: page
 title: cpd
 ---
-<span style="color: yellowgreen"><h2>Nun CPD: </h2> </span>
+
+<div class="cpd">
+	<h4><li><a href="{{ cpd.url }}">{{ cpd.title }}</a></li></h4>
+ </div>
+
+
+
+<!-- <span style="color: yellowgreen"><h2>Nun CPD: </h2> </span>
 
 {% for cpd in site.cpd %}
 	<div class="cpd">
 	   <h4><li><a href="{{ cpd.url }}">{{ cpd.title }}</a></li></h4>
 	</div>
-{% endfor %}
+{% endfor %} -->
