--- a/organizar/indexcpd.html
+++ b/organizar/indexcpd.html
@@ -7,7 +7,7 @@ title: cpd
 <div class="blurb">
 	<span style="color: orange"><h2>A información que temos é:</h2> </span>
 	<ul>
-		<li> <a href="/cpd">Imaxes dun CPD</a></p>
+		<li> <a href="/_post/cpd.html">Imaxes dun CPD</a></p>
 
 </ul>
 </div><!-- /.blurb -->
