--- a/cpd/index.html
+++ b/cpd/index.html
@@ -7,7 +7,7 @@ title: cpd
 	<h4><li><a href="{{ cpd.url }}">{{ cpd.title }}</a></li></h4>
  </div>
 
-
+<!-- 
 
 <!-- <span style="color: yellowgreen"><h2>Nun CPD: </h2> </span>
 
@@ -15,4 +15,4 @@ title: cpd
 	<div class="cpd">
 	   <h4><li><a href="{{ cpd.url }}">{{ cpd.title }}</a></li></h4>
 	</div>
-{% endfor %} -->
+{% endfor %} --> -->
