--- a/cpd/index.html
+++ b/cpd/index.html
@@ -7,12 +7,10 @@ title: cpd
 	<h4><li><a href="{{ cpd.url }}">{{ cpd.title }}</a></li></h4>
  </div>
 
-<!-- 
-
-<!-- <span style="color: yellowgreen"><h2>Nun CPD: </h2> </span>
+ <span style="color: yellowgreen"><h2>Nun CPD: </h2> </span>
 
 {% for cpd in site.cpd %}
 	<div class="cpd">
 	   <h4><li><a href="{{ cpd.url }}">{{ cpd.title }}</a></li></h4>
 	</div>
-{% endfor %} --> -->
+{% endfor %} 
