--- a/organizar/indexcpd.html
+++ b/organizar/indexcpd.html
@@ -5,7 +5,7 @@ title: cpd
 
 
 <div class="blurb">
-	<span style="color: orange"><h2>A información que temos é:</h2> </span>
+	<span style="color: yellowgreen"><h2>A información que temos é:</h2> </span>
 	<ul>
 		<li> <a href="/cpd">Imaxes dun CPD</a></p>
 
